--- a/lib/src/dashboard_component/dash_home_component/dash_home_component.html
+++ b/lib/src/dashboard_component/dash_home_component/dash_home_component.html
@@ -8,7 +8,7 @@
                             <span class="fa fa-envelope"></span>
                         </div>
                         <br>
-                        100 Post created
+                        {{posts.length}} Post created
                     </div>
                 </div>
             </div>
@@ -30,11 +30,17 @@
                             <span class="fa fa-envelope"></span>
                         </div>
                         <br>
-                        18 New posts
+                        {{newPost.length}} New posts
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
+
+<!--    <div class="row br-20 mt-3 box-one p-3">-->
+<!--        <div class="col-12">-->
+<!--            <gaugechart [chartData]="gaugeDataAll"-->
+<!--                        [chartProperties]="gaugeProperties"></gaugechart>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
