--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -20,7 +20,7 @@
                     <material-icon icon="home"></material-icon>Home
                 </material-list-item>
                 <material-list-item [routerLink]="InnerRoutePaths.create_post.toUrl()" [routerLinkActive]="'active_side'">
-                    <material-icon icon="add_box"></material-icon>Create Post
+                    <material-icon icon="add_circle"></material-icon>Create Post
                 </material-list-item>
                 <material-list-item [routerLink]="InnerRoutePaths.view_post.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="visibility"></material-icon>View Post
@@ -31,9 +31,6 @@
                 <div label class="my-2 text-dark">Accounts</div>
                 <material-list-item [routerLink]="InnerRoutePaths.post_account.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="person"></material-icon>Post Accounts
-                </material-list-item>
-                <material-list-item [routerLink]="InnerRoutePaths.user_account.toUrl()" [routerLinkActive]="'active_side'">
-                    <material-icon icon="groups"></material-icon>User Accounts
                 </material-list-item>
                 <material-list-item [routerLink]="InnerRoutePaths.setting.toUrl()" [routerLinkActive]="'active_side'">
                     <material-icon icon="settings"></material-icon>Settings
@@ -59,25 +56,20 @@
                 <img src="img/postit-name.png" alt="postit-logo" class="img-fluid ml-4" width="70px">
 
                 <!--            <span class="material-header-title ml-2">Postit</span>-->
-                <div class="material-spacer"></div>
-                <nav class="material-navigation mt-0">
-                    <!--<material-input type="search" id="search"
-                                    leadingGlyph="search">
-                    </material-input>-->
-                    <input type="search" name="search" id="search" class="nt-form-control">
-                    <material-icon icon="search" id="search-icon"></material-icon>
-                </nav>
-                <nav class="material-navigation">
+
+                <nav class="material-navigation ml-auto" style="position: fixed !important; left: 95vw !important;">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target">
-                                <material-icon icon="person_outline"></material-icon>
+                            <a href="#" class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" data-target="dropdown_target">
+                                <material-icon icon="person_outline" class="mt-1"></material-icon>
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown_target">
-                                <a href="#" class="dropdown-item">Profile</a>
+                            <div class="dropdown-menu br-20 shadow-c border-0 p-2" aria-labelledby="dropdown_target">
+                                <a href="#" class="dropdown-item br-20">Profile <span class="fa fa-user-circle float-right mt-1 text-muted text-sm"></span></a>
                                 <div class="dropdown-divider"></div>
-                                <a href="#" class="dropdown-item">Settings</a>
-                                <a href="#" class="dropdown-item">Logout</a>
+                                <a href="#" class="dropdown-item br-20">Help<span class="fa fa-question-circle float-right mt-1 text-muted text-sm"></span></a>
+                                <a href="#" class="dropdown-item br-20">Settings <span class="fa fa-tools float-right mt-1 text-muted text-sm"></span></a>
+                                <div class="dropdown-divider"></div>
+                                <a href="#" class="dropdown-item br-20">Logout <span class="fa fa-sign-out-alt float-right mt-1 text-muted text-sm"></span></a>
                             </div>
                         </li>
                     </ul>
