--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -48,18 +48,20 @@
                         <material-input
                                 type="email"
                                 label="Email"
-                                leadingGlyph="email">
+                                leadingGlyph="email"
+                                [(ngModel)]="login.username">
                         </material-input>
                     </div>
                     <div group>
                         <material-input
                                 type="password"
                                 label="Password"
-                                leadingGlyph="fingerprint">
+                                leadingGlyph="fingerprint"
+                                [(ngModel)]="login.password">
                         </material-input>
                     </div>
                     <div group>
-                        <material-button id="login-button" (click)="gotoDashboard()">
+                        <material-button id="login-button" class="br-20">
                             Login
                         </material-button>
                     </div>
@@ -68,3 +70,4 @@
         </div>
     </div>
 </div>
+<!--(click)="gotoDashboard()"-->
