--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -61,7 +61,7 @@
                         </material-input>
                     </div>
                     <div group>
-                        <material-button id="login-button" class="br-20">
+                        <material-button (click)="gotoDashboard()" id="login-button" class="br-20">
                             Login
                         </material-button>
                     </div>
