--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -126,7 +126,7 @@
                 <!--<input type="text" class="nt-form-control border-0 br-20 bg-blur" placeholder="Access Token">-->
                 <!--<div class="fb-login-button" data-size="large" data-button-type="continue_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width="" (click)="getFacebook()"></div>-->
                 <!--<div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
-                <a [href]="loginLinkUrl" class="btn btn-primary btn-lg btn-block">login with facebook</a>
+                <button class="btn btn-outline-primary btn-lg btn-block br-20" (click)="getFacebookAuth()">login with facebook</button>
                 <!--<div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
             </div>
             <div class="form-group">
