--- a/lib/src/login_component/login_component.html
+++ b/lib/src/login_component/login_component.html
@@ -37,37 +37,34 @@
 
 <!--suppress ALL -->
 <div class="limiter">
-    <div class="container-login100" style="background-image: url('img/bg-01.jpg');">
-        <div class="wrap-login100">
-				<span class="login100-form-title my-2">
-					Login
-				</span>
-            <form class="login100-form">
-                <div class="p-5">
-                    <div group>
-                        <material-input
-                                type="email"
-                                label="Email"
-                                leadingGlyph="email"
-                                [(ngModel)]="login.username">
-                        </material-input>
-                    </div>
-                    <div group>
-                        <material-input
-                                type="password"
-                                label="Password"
-                                leadingGlyph="fingerprint"
-                                [(ngModel)]="login.password">
-                        </material-input>
-                    </div>
-                    <div group>
-                        <material-button (click)="gotoDashboard()" id="login-button" class="br-20">
-                            Login
-                        </material-button>
-                    </div>
+    <div class="container">
+        <form class="login100-form">
+            <div class="p-5">
+                <div group>
+                    <material-input
+                            type="text"
+                            label="Username"
+                            leadingGlyph="person"
+                            [(ngModel)]="login.username">
+                    </material-input>
                 </div>
-            </form>
-        </div>
+                <div group>
+                    <material-input
+                            type="password"
+                            label="Password"
+                            leadingGlyph="fingerprint"
+                            [(ngModel)]="login.password">
+                    </material-input>
+                </div>
+                <div group>
+                    <material-button id="login-button" class="br-20 px-3" (click)="gotoDashboard()" *ngIf="!isLoading">
+                        Login
+                    </material-button>
+                    <material-button id="login-button" class="br-20 px-3" (click)="gotoDashboard()" *ngIf="isLoading">
+                        <img src="img/mini-loader.gif" style="width: 20px; height: auto">
+                    </material-button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
-<!--(click)="gotoDashboard()"-->
