--- a/lib/src/navbar_component/navbar_component.html
+++ b/lib/src/navbar_component/navbar_component.html
@@ -5,6 +5,6 @@
 <!--        </material-button>-->
 
         <button class="btn btn-sm rounded mx-1 bg-white br-20 px-3 border-0" (click)="gotoLogin()">Log In</button>
-        <button class="btn btn-sm rounded mx-1 bg-orange text-white br-20 px-3 border-0" disabled>Sign Up</button>
+        <button class="btn btn-sm rounded mx-1 bg-orange text-white br-20 px-3 border-0" (click)="gotoSignup()">Sign Up</button>
     </div>
 </nav>
