--- a/lib/src/about_component/about_component.html
+++ b/lib/src/about_component/about_component.html
@@ -1,23 +1,25 @@
-<nav-app></nav-app>
-<div class="container mt-3 mb-1">
-    <!-- Table -->
-    <div class="row justify-content-center">
-        <div class="col-lg-6 col-md-10 col-sm-12 card border-0 bg-transparent">
-            <img src="img/postit.svg" alt="postit_logo" width="450px" class="img-fluid mr-auto ml-auto">
+<div class="m-0 p-0 row col-12">
+    <nav-app></nav-app>
+    <div class="container mt-3 mb-1">
+        <!-- Table -->
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-10 col-sm-12 card border-0 bg-transparent">
+                <img src="img/postit-logo-new.png" alt="postit_logo" class="img-fluid mr-auto ml-auto">
+            </div>
+        </div>
+        <div class="row justify-content-center mt--10">
+            <div class="col-lg-6 col-md-10 col-sm-12 bg-transparent">
+                <div class="display-custom text-center">About</div>
+            </div>
         </div>
     </div>
-    <div class="row justify-content-center mt--10">
-        <div class="col-lg-6 col-md-10 col-sm-12 bg-transparent">
-            <div class="display-custom text-center">About</div>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-12 col-sm-12">
-            <div class="text-muted text-center">
-                <strong>Postit</strong> version 1.2.3. API 1.0.2v3. Developed by Shiftr GH <br>
-                <material-icon (click)="gotoHome()" icon="arrow_back"></material-icon>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-md-12 col-sm-12">
+                <div class="text-muted text-center">
+                    <strong>Postit</strong> version 1.0.0. API 1.0.0v1. Developed by Shiftr Team <br>
+                    <material-icon (click)="gotoHome()" icon="arrow_back"></material-icon>
+                </div>
             </div>
         </div>
     </div>
