--- a/lib/src/dashboard_component/create_post_component/csv_upload_component/csv_upload_component.html
+++ b/lib/src/dashboard_component/create_post_component/csv_upload_component/csv_upload_component.html
@@ -7,5 +7,9 @@
         <div class="col-4 mx-auto" style="margin-top: 3px">
             <button class="btn btn-primary px-4 br-20" (click)="doUpload()">Upload</button>
         </div>
+        <div class="col-8" *ngIf="progressStatus">
+            <material-progress [activeProgress]="activeProgress"></material-progress>
+            <span class="text-muted pl-2">{{activeProgress}}% done</span>
+        </div>
     </div>
 </div>
