--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -1,18 +1,19 @@
 <!--Material Side bar-->
 <div id="app-body">
-    <material-drawer persistent #drawer="drawer"
+    <material-drawer #drawer="drawer" temporary
                      [class.custom-width]="customWidth"
                      [attr.end]="end ? '' : null"
                      [attr.overlay]="overlay ? '' : null"
-                     style="border: 0 !important; position: fixed !important;">
+                     style="border: 0 !important; position: fixed !important;" id="persistentDrawer">
         <material-list *deferredContent id="app-drawer">
             <div class="text-center py-3 w-50 mx-auto">
                 <div class="card bg-light br-20 py-4 border-0">
                     <span class="fa fa-user-circle fa-3x"></span>
                 </div>
             </div>
-            <div class="text-center font-weight-bold text-muted mb-4">
+            <div class="text-center font-weight-bold text-muted mb-4 cursor-pointer" id="account">
                 Nathaniel Rice
+                <span class="ml-2 fa fa-caret-down"></span>
             </div>
             <!-- Here is a group without a label -->
             <div group class="p-3 border-0 font-nyata">
@@ -39,7 +40,6 @@
             <!-- This group has a label -->
         </material-list>
     </material-drawer>
-    <!--/Material Side bar-->
 
 
     <!--Page Content-->
@@ -57,8 +57,8 @@
 
                 <!--            <span class="material-header-title ml-2">Postit</span>-->
 
-                <nav class="material-navigation ml-auto" style="position: fixed !important; left: 95vw !important;">
-                    <ul class="navbar-nav">
+                <nav class="material-navigation ml-auto" id="user-icon">
+                    <!--<ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" data-target="dropdown_target">
                                 <material-icon icon="person_outline" class="mt-1"></material-icon>
@@ -72,7 +72,8 @@
                                 <a href="#" class="dropdown-item br-20">Logout <span class="fa fa-sign-out-alt float-right mt-1 text-muted text-sm"></span></a>
                             </div>
                         </li>
-                    </ul>
+                    </ul>-->
+                    <material-icon icon="settings_power" class="mt-1"></material-icon>
 
                 </nav>
             </div>
