--- a/lib/src/dashboard_component/manage_post_component/manage_post_component.html
+++ b/lib/src/dashboard_component/manage_post_component/manage_post_component.html
@@ -11,7 +11,7 @@
     <div class="col-lg-4 col-md-12 col-sm-12">
         <div class="card shadow-c bg-transparent box-one br-20 border-0">
             <div class="card-body">
-                <div class="text-center h6 text-default-one">Create Schedule</div>
+                <div class="text-center h6 text-muted">Create Schedule</div>
                 <form novalidate>
                     <div class="form-group">
                         <input type="text"
@@ -27,7 +27,7 @@
                     </div>-->
                     <div class="form-group">
                         <input type="text" class="nt-form-control border-0 pr-5 br-20 datepicker alert-danger" placeholder="from" [(value)]="startDate" [class.alert-danger]="inputError">
-                        <span class="fa fa-calendar float-right input-icon cursor-pointer text-default-two"></span>
+                        <span class="fa fa-calendar float-right input-icon cursor-pointer"></span>
                         <material-datepicker [(date)]="startDate"
                                              [minDate]="fromStart"
                                              [maxDate]="fromEnd"
@@ -37,7 +37,7 @@
                     </div>
                     <div class="form-group">
                         <input type="text" class="nt-form-control border-0 pr-5 br-20" placeholder="to" [(value)]="finalDate" [class.alert-danger]="inputError">
-                        <span class="fa fa-calendar float-right input-icon cursor-pointer text-default-two"></span>
+                        <span class="fa fa-calendar float-right input-icon cursor-pointer"></span>
                         <material-datepicker [(date)]="finalDate"
                                              [minDate]="startDate"
                                              [maxDate]="fromEnd"
@@ -51,21 +51,21 @@
         <div class="card shadow-c bg-transparent box-one br-20 border-0 py-3 mt-5 my-3">
             <div class="card bg-transparent br-20 border-0 mx-0" id="scheduled-posts">
                 <div class="card-body">
-                    <div class="text-center h6 text-default-one mb-3">Scheduled Posts</div>
+                    <div class="text-center h6 text-muted mb-3">Scheduled Posts</div>
                     <div *ngIf="scheduledPosts.isNotEmpty" class="px-3">
                         <div *ngFor="let scheduledPost of scheduledPosts; let $i = index" class="row py-1 bg-light br-20 mb-2">
                             <div class="col-9">
-                                <span class="text-default-three d-post-text py-1">
+                                <span class="text-muted d-post-text py-1">
                                     {{scheduledPost.title}}
                                 </span>
                             </div>
                             <div class="col-3 my-auto text-right">
-                                <span class="fa fa-trash px-1 br-20 cursor-pointer text-default-two" (click)="remove($i)" style="font-size: 12px !important;"></span>
+                                <span class="fa fa-trash px-1 br-20 cursor-pointer" (click)="remove($i)" style="font-size: 12px !important;"></span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="mt-5 text-default-three text-center" *ngIf="scheduledPosts.isEmpty">
+                    <div class="mt-5 text-muted text-center" *ngIf="scheduledPosts.isEmpty">
                         No schedule created
                     </div>
                 </div>
@@ -106,10 +106,10 @@
                                     <material-checkbox [(checked)]="allIsChecked" (click)="getAllIds()"></material-checkbox>
                                 </div>
                                 <div class="col-6 my-auto">
-                                    <div class="text-default-three">Post message</div>
+                                    <div class="text-muted">Post message</div>
                                 </div>
                                 <div class="col-4 my-auto">
-                                    <div class="text-default-three">Post tags</div>
+                                    <div class="text-muted">Post tags</div>
                                 </div>
                             </div>
 
@@ -129,13 +129,16 @@
                         </div>
                     </div>
                     <div *ngIf="filteredPosts.isEmpty && !loading">
-                        <div class="nt-center text-default-three">
-                            <span class="fa fa-cloud-moon-rain text-default-three mr-1"></span>
+                        <div class="nt-center text-muted">
+                            <span class="fa fa-cloud text-muted mr-1"></span>
                             {{emptyMessage}}
+                            <button type="button" class="btn btn-sm btn-outline-primary br-20 ml-2" *ngIf="createNeed" [routerLink]="InnerRoutePaths.create_post.toUrl()">
+                                <span class="fa fa-plus-circle mr-1"></span>Create post
+                            </button>
                         </div>
                     </div>
                     <div *ngIf="filteredPosts.isEmpty && loading">
-                        <div class="nt-center text-default-three">
+                        <div class="nt-center text-muted">
                             <img src="img/load.gif" alt="Loading..." class="img-fluid">
                         </div>
                     </div>
