--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -125,10 +125,9 @@
                 <!--<button class="btn btn-block btn-primary br-20" (click)="getFacebook()">Login with facebook</button>-->
                 <!--<input type="text" class="nt-form-control border-0 br-20 bg-blur" placeholder="Access Token">-->
                 <!--<div class="fb-login-button" data-size="large" data-button-type="continue_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width="" (click)="getFacebook()"></div>-->
+<!--                <div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
                 <!--<div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
-<!--                <a [href]="loginLinkUrl" class="btn btn-outline-primary br-20 btn-lg btn-block">login with facebook</a>-->
-                <button class="btn btn-outline-primary br-20 btn-lg btn-block" (click)="gotoFb()">login with facebook</button>
-                <!--<div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
+                <button class="btn btn-primary btn-sm btn-block btn-outline-primary br-20">login in with facebook</button>
             </div>
             <div class="form-group">
                 <span class="float-right my-3">
