--- a/lib/src/dashboard_component/view_post_component/view_post_component.html
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.html
@@ -107,10 +107,19 @@
                     <div class="col-auto mx-auto my-auto">
                         <button type="submit" class="btn btn-primary btn-sm br-20 px-3" [class.disabled]="selectedFilter.isEmpty">Fetch post</button>
                     </div>
-                    <div class="col-auto mx-auto align-content-end my-auto">
+                    <div class="col-auto mx-auto my-auto">
                         <button type="button" class="btn btn-sm br-20 shadow-c"
                                 [class.disabled]="deleteIds.isEmpty" (click)="batchDelete()">
                             <span class="fa fa-trash"></span>
+                        </button>
+                    </div>
+                    <div class="col-auto mx-auto my-auto">
+                        <button type="button" class="btn btn-sm br-20 shadow-c"
+                                (click)="autoSync()">
+                            <span class="fa fa-sync" *ngIf="!isRefresh"></span>
+                            <div *ngIf="isRefresh">
+                                <img src="img/mini-loader.gif" style="width: 20px; height: auto">
+                            </div>
                         </button>
                     </div>
                     <div class="col-auto mx-auto my-auto">
@@ -150,7 +159,8 @@
                                 <span class="tag" *ngFor="let tag of filteredPost.postTag">{{tag}}</span>
                             </div>
                             <div class="col-2 my-auto">
-                                Posted
+                                <span class="text-success" *ngIf="filteredPost.postStatus">Posted</span>
+                                <span class="text-primary" *ngIf="!filteredPost.postStatus">Pending</span>
                             </div>
                             <div class="col-2 d-post-text my-auto">
                                 {{filteredPost.createdOn}}
@@ -160,8 +170,11 @@
                 </div>
                 <div *ngIf="filteredPosts.isEmpty && !loading">
                     <div class="nt-center text-muted">
-                        <span class="fa fa-cloud-moon-rain text-muted mr-1"></span>
+                        <span class="fa fa-cloud text-muted mr-1"></span>
                         {{emptyMessage}}
+                        <button type="button" class="btn btn-sm btn-outline-primary br-20 ml-2" *ngIf="createNeed" [routerLink]="InnerRoutePaths.create_post.toUrl()">
+                            <span class="fa fa-plus-circle mr-1"></span>Create post
+                        </button>
                     </div>
                 </div>
                 <div *ngIf="filteredPosts.isEmpty && loading">
