--- a/lib/src/home_component/home_component.html
+++ b/lib/src/home_component/home_component.html
@@ -1,8 +1,8 @@
-<div class="row mx-0">
+<!--<div class="row mx-0">
     <div class="col-lg-6 col-sm-12 mb-4">
         <div class="p-5">
             <div class="mt-3 mb-4">
-<!--                <div class="display-custom text-center">Post <or>it</or></div>-->
+&lt;!&ndash;                <div class="display-custom text-center">Post <or>it</or></div>&ndash;&gt;
                 <div class="display-custom text-center">Postit</div>
                 <div class="text-muted mt-3">
                     Market digitally with the all new
@@ -25,30 +25,43 @@
     <div class="col-lg-6 col-sm-12 m-0" id="home">
         <nav-app></nav-app>
     </div>
+</div>-->
+<div class="row m-0 p-0">
+    <div class="col-lg-6 col-md-12 col-sm-12 px-0" style="height: 100vh; width: 100vw; overflow-x: hidden; overflow-y: scroll; box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, 0.16) !important;">
+        <nav-app></nav-app>
+        <div class="container">
+            <div class="px-5 pb-sm-5">
+                <div class="mb-2">
+                    <div class="display-custom text-center">
+                        <img src="img/postit-logo-new.png" alt="Postit-home" class="img-fluid">
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col-6" style="border-right: 1px solid #ababab">
+                            <div class="text-muted">
+                                Market digitally with the all new
+                                Postit platform. <br> <hr width="100px">
+                                
+                                <div class="row my-1 px-3 text-dark">
+                                    <span class="mx-auto cursor-pointer fab fa-facebook"></span>
+                                    <span class="mx-auto cursor-pointer fab fa-twitter"></span>
+                                    <span class="mx-auto cursor-pointer fab fa-instagram"></span>
+                                    <span class="mx-auto cursor-pointer fab fa-linkedin-in"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="text-muted">
+                                Don't be left out. Sign up now and grow your
+                                business.
+                                <button type="button" class="btn btn-block btn-light br-20 mt-2" (click)="gotoAbout()">About <span class="fa fa-arrow-right ml-1"></span></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-sm-12 px-0 d-none d-lg-block">
+        <img src="img/svg-bg-01.png" alt="home-bg" style="height: 100vh; width: inherit">
+    </div>
 </div>
-
-
-<!--<div class="container">-->
-<!--    &lt;!&ndash; Table &ndash;&gt;-->
-<!--    <div class="row justify-content-center">-->
-<!--        <div class="col-lg-6 col-md-10 col-sm-12 card border-0 bg-transparent">-->
-<!--            <img src="img/postit.svg" alt="postit_logo" width="450px" class="img-fluid mr-auto ml-auto">-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="row justify-content-center mt&#45;&#45;10">-->
-<!--        <div class="col-lg-6 col-md-10 col-sm-12 bg-transparent">-->
-<!--            <div class="display-custom text-center">Post <or>it</or></div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="container">-->
-<!--    <div class="row justify-content-center">-->
-<!--        <div class="col-lg-8 col-md-12 col-sm-12">-->
-<!--            <div class="text-muted text-center">-->
-<!--                Market digitally with the all new-->
-<!--                Postit platform. Click <span id="about" (click)="gotoAbout()">about</span> to learn more about us.-->
-<!--                Or login and have the new experience.-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
